--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@mui/material": "^6.4.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "flowbite": "^3.1.2",
     "lucide-react": "^0.477.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.3.0",
+    "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.2",
     "ttf2woff2": "^6.0.1",
     "yup": "^1.6.1"
