--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "@hookform/resolvers": "^4.1.3",
     "@mui/icons-material": "^6.4.6",
     "@mui/material": "^6.4.6",
+    "@tanstack/react-query": "^5.72.1",
+    "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "flowbite": "^3.1.2",
     "lucide-react": "^0.477.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-hook-form": "^7.54.2",
+    "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
     "recharts": "^2.15.1",
